syntax = "proto3";

option go_package = "github.com/Urotea/go-grpc-sample/api";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package api;

// The greeting service definition.
service UserManagement {
  rpc AddUser (AddUserRequest) returns (AddUserReply) {}
}

// The request message containing the user's name.
message AddUserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
}

// The response message containing the greetings
message AddUserReply {
  string message = 1;
}
